// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client should apply css filter if background is false and inverse prop is true 1`] = `
<styled.a
  background={false}
  href="url"
  inverse={true}
  rel="noreferrer"
  styles="
    background-color: transparent;
    display: inline-block;
    padding: 10px;
    filter: brightness(0) invert(1);
"
  target="_blank"
>
  <Image
    alt="alt"
    size={20}
    src="logo"
    width={10}
  />
</styled.a>
`;

exports[`Client should match snapshot 1`] = `
<styled.a
  background={false}
  href="url"
  rel="noreferrer"
  styles="
    background-color: transparent;
    display: inline-block;
    padding: 10px;
    
"
  target="_blank"
>
  <Image
    alt="alt"
    size={20}
    src="logo"
    width={10}
  />
</styled.a>
`;

exports[`Client should match snapshot with default argument of backrgound 1`] = `
<styled.a
  background={true}
  href="url"
  rel="noreferrer"
  styles="
    background-color: white;
    display: inline-block;
    padding: 10px;
    
"
  target="_blank"
>
  <Image
    size={20}
    src="logo"
    width={10}
  />
</styled.a>
`;
